--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 32px;
 }
 
 .name {
@@ -34,6 +35,22 @@ body {
   display: inline-block;
   max-width: 100%;
   height: auto;
+}
+
+.segment { 
+  border-top: 1px solid #f6f6f6;
+}
+
+.segment-title {
+  margin-top: 16px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 22px;
+}
+
+.segment-content {
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 /* On desktop screen. */
